fixed errors and added dark mode / text to d3 chart

--- a/flaskdemo/static/css/d3viz.css
+++ b/flaskdemo/static/css/d3viz.css
@@ -4,6 +4,11 @@ body {
     width: 99%;
     background-color: white;
     color: black;
+    padding-bottom: 20px;
+}
+
+p {
+  text-indent: 30px;
 }
 
 .dark-mode {
